--- a/hackadoo/templates/index_debug.html
+++ b/hackadoo/templates/index_debug.html
@@ -5,11 +5,15 @@
     <head>
         <meta charset="utf-8">
         <title>{{ page_title }}</title>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     </head>
 
     <body>
         <h6 style="position:absolute;bottom: 5px;left: 5px;color: #ccc">/!\ DEBUG BUILD /!\</h6>
         <div id="app"></div>
         {% render_bundle 'app' %}
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     </body>
 </html>
