--- a/hackadoo/templates/index_debug.html
+++ b/hackadoo/templates/index_debug.html
@@ -7,6 +7,16 @@
         <title>{{ page_title }}</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+
+        <style>
+            body {
+                box-shadow: 0 0 0 black, 0 0 6em #8a4d0f inset;
+                background: #fffef0;
+                margin: 0;
+                padding: 2em;
+             }
+             
+        </style>
     </head>
 
     <body>
