--- a/hackadoo/templates/index_debug.html
+++ b/hackadoo/templates/index_debug.html
@@ -10,6 +10,7 @@
 
         <style>
             body {
+                min-height: 100vh;
                 box-shadow: 0 0 0 black, 0 0 6em #8a4d0f inset;
                 background: #fffef0;
                 margin: 0;
